# Stonks-game

./: .clang-format  .gitignore  CMakeLists.txt  Install_libs.cmake  README.md  index.md
Console_GUI/: CMakeLists.txt
Console_GUI/include/: Canvas.h  Command.h  Event.h  EventProducer.h  EventSequence.h  Frontend.h  GUI.h  GUIEvent.h  Helper.h  Utils.h  Widget.h  optional.hpp  utils.h
Console_GUI/include/events/: ChangeCanvas.h
Console_GUI/include/widgets/: BindableWidget.h  Button.h  ColorWidget.h  Graphic.h  Group.h  HoverableWidget.h  Label.h  MessageBox.h  PlainText.h  PositionedWidget.h  Purchase.h  SizeableWidget.h  Widget.h
Console_GUI/include/widgets/dsl/: DSL.h
Console_GUI/src/: Canvas.cpp  EventProducer.cpp  GUI.cpp  Helper.cpp  Widget.cpp  utils.cpp
Console_GUI/src/widgets/: BindableWidget.cpp  Button.cpp  ColorWidget.cpp  Graphic.cpp  Group.cpp  HoverableWidget.cpp  Label.cpp  MessageBox.cpp  PlainText.cpp  PositionedWidget.cpp  Purchase.cpp  Widget.cpp
Console_GUI/test/: makefile  testConsoleGUI.cpp
Game/: CMakeLists.txt
Game/include/: AI.h  Config.h  CreatingGui.h  Debug.h  Event.h  EventConductor.h  EventHandler.h  FramePainter.h  GameLoading.h  GameObject.h  Gamer.h  ObjectFactory.h  Player.h  Purchase.h  Sale.h  Statistics.h  TaxStrategy.h  ViewableContainer.h  World.h  WorldState.h
Game/include/GameWidgets/: ButtonWithObj.h  Purchase.h
Game/include/commands/: ChangeActiveWidgetCommand.h  GameObjectCommand.h  HideCommand.h  PurchaseCommand.h  SaleCommand.h  SceneChangeCommand.h  ShutdownCommand.h  StateCommand.h
Game/include/gameWidgets/: ButtonWithObj.h  Purchase.h  Sale.h
Game/include/game_widgets/: Purchase.h  Sale.h  SharedGraphic.h  TradeButton.h
Game/include/game_widgets/dsl/: DSL.h
Game/resources/: config.json  objects.json
Game/src/: AI.cpp  Config.cpp  CreatingGui.cpp  Debug.cpp  EventConductor.cpp  EventHandler.cpp  EventProducer.cpp  FramePainter.cpp  GameLoading.cpp  GameObject.cpp  Gamer.cpp  ObjectFactory.cpp  Player.cpp  Purchase.cpp  Sale.cpp  Statistics.cpp  World.cpp  WorldState.cpp  main.cpp
Game/src/GameWidgets/: ButtonWithObj.cpp  Purchase.cpp  Sale.cpp
Game/src/game_widgets/: Purchase.cpp  Sale.cpp  SharedGraphic.cpp  TradeButton.cpp
Game/test/: test.cpp
Lib/Windows/: pdcurses.lib
docs/: config.md  gameplay.md  index.md  installation.md  tui.md
